--- a/src/content/content.module.css
+++ b/src/content/content.module.css
@@ -2,7 +2,7 @@
 .content{
   float: right;
   width: 80%;
-  background-color: rgb(237,254,255);
+  background-color: rgb(255, 255, 255);
   padding: 5%;
 }
 
@@ -35,4 +35,72 @@ hr{
   margin-block-start: 0;
   margin-block-end: 0.1rem;
   border-color: #c2f4f5;
+}
+
+.horisontalrows{
+  margin: 70px 0;
+}
+
+
+.chat{
+  width: 100%;
+  height: 3300px;
+  font-size: 22px;  
+}
+
+.sec{
+  min-height: 360px;
+}
+
+.chatname{
+  height: 50px;
+  font-size: 15px;
+  font-weight: 600;
+  width: 100%;
+}
+
+.chatname p{
+  float: right;
+  margin: 0;
+}
+
+.worker{
+  width: 100%;
+  height: 100px;
+
+}
+
+.worker p{
+  float: right;
+   margin-top: 0;
+  background-color: #DFF9FA;
+  padding: 10px;
+  border-radius: 15px 0 15px 15px;
+  max-width: 85%;
+}
+
+.client{
+  width: 100%;
+}
+
+.client p{
+  color: white;
+  font-style: italic;
+  float: left;
+  background-color: #3b3f61;
+  padding: 15px;
+  border-radius: 0 15px 15px 15px;
+  max-width: 85%;
+}
+
+.description{
+  float: left;
+  width: 95%;
+  border-radius: 15px 15px 15px 15px;
+  background-color: #E2E8F0;
+  padding: 30px;
+}
+
+.description p{
+  margin: 0;
 }
